# client_matrix_cn

./: README.md  package.json
.github/workflows/: build-tauri.yml
scripts/: fetch-fingerprint-chromium.js  prepare-tauri-resources.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src/main/: main.ts  preload.ts  sidecar-server.ts
src/main/libs/: cdpBrowser.ts
src/main/libs/matrix/: accountManager.ts  binancePostRunner.ts  binanceRepostRunner.ts  cdpCommands.ts  driverCtx.ts  engageRunner.ts  imageTextRunner.ts  inspectHold.ts  keepAlive.ts  kernelInstaller.ts  kernelPool.ts  planLimit.ts  proxyBridge.ts  reloginPrompt.ts  runStore.ts  selftest.ts  taskRunner.ts  taskStore.ts  trackPresets.ts  tweetPostRunner.ts  types.ts  viralRewriteRunner.ts
src/main/libs/scenario/: artifactWriter.ts  platformLoginDriver.ts  scenarioManager.ts  subPlatformRegistry.ts  types.ts
src/main/libs/video/: billing.ts  compose.ts  ffmpegRuntime.ts  fontAsset.ts  freeformWriter.ts  hotspotDouyinSource.ts  hotspotProvider.ts  hotspotTiktokSource.ts  htmlVideoRenderer.ts  pipeline.ts  publishCaptionWriter.ts  sceneComposer.ts  scriptWriter.ts  template-pipeline.ts  templateAnim.ts  templateHtmlWriter.ts  templateLibrary.ts  themes.ts  thread-pipeline.ts  threadProvider.ts  tts.ts  videoConfig.ts  videoRunWindow.ts  ytdlpRuntime.ts
src/main/libs/video/publishers/: types.ts  (+2 more)
src/renderer/: App.tsx  buildFlags.ts  tauriShim.ts
src/renderer/components/: LoginWall.tsx  Settings.tsx  Sidebar.tsx  TokenInsufficientDialog.tsx
src/renderer/components/common/: WalletBadge.tsx
src/renderer/components/cowork/: CoworkHistoryPage.tsx  CoworkSessionDetail.tsx  CoworkView.tsx  TickerMarquee.tsx
src/renderer/components/home/: HomeView.tsx
src/renderer/components/im/: IMSettings.tsx
src/renderer/components/invite/: InviteTicker.tsx  InviteView.tsx  PartnerApplyCard.tsx  PartnerHero.tsx
src/renderer/components/matrix/: MatrixBinancePostWizard.tsx  MatrixBinanceRepostWizard.tsx  MatrixFacebookPostWizard.tsx  MatrixImageTextWizard.tsx  MatrixInstagramPostWizard.tsx  MatrixRedditPostWizard.tsx  MatrixReplyFansWizard.tsx  MatrixSourcesPreview.tsx  MatrixTaskWizard.tsx  MatrixTweetPostWizard.tsx  MatrixVideoDownloadWizard.tsx  MatrixView.tsx  MatrixViralRewriteWizard.tsx  Web3NewsSourcesPreview.tsx  postLangs.ts  postSources.ts
src/renderer/components/mcp/: McpManager.tsx  McpServerFormModal.tsx
src/renderer/components/membership/: MembershipExpiryModal.tsx  MembershipPanel.tsx
src/renderer/components/notifications/: NotificationCenter.tsx
src/renderer/components/partners/: PartnersView.tsx
src/renderer/components/personality/: PersonalityView.tsx
src/renderer/components/scenario/: BilibiliWorkflowsPage.tsx  BinanceWorkflowsPage.tsx  DouyinWorkflowsPage.tsx  KuaishouWorkflowsPage.tsx  LoginRequiredModal.tsx  MyTasksPage.tsx  RunHistoryPage.tsx  RunRecordDetailPage.tsx  ScenarioView.tsx  SensitiveCheckPage.tsx  ShipinhaoWorkflowsPage.tsx  SourcePickerModal.tsx  TaskDetailPage.tsx  TikTokWorkflowsPage.tsx  ToutiaoWorkflowsPage.tsx  XWorkflowsPage.tsx  XhsReplyFansCommentWizard.tsx  XhsWorkflowsPage.tsx  YoutubeWorkflowsPage.tsx
src/renderer/components/scheduledTasks/: DeleteConfirmModal.tsx
src/renderer/components/skills/: SkillsManager.tsx
src/renderer/components/wallet/: CnyWithdrawModal.tsx  WalletView.tsx
src/renderer/components/web3/: Web3View.tsx
src/renderer/services/: endpoints.ts  i18n.ts  noobclawApi.ts  noobclawAuth.ts  paymentInfoCache.ts  profitShare.ts  scenario.ts  trackNames.ts  videoCreation.ts  videoTaskStore.ts
src/renderer/types/: electron.d.ts
src/renderer/utils/: shareMessage.ts  shortId.ts
(+1 files in other folders)
